--- a/src/_includes/layouts/post.liquid
+++ b/src/_includes/layouts/post.liquid
@@ -4,5 +4,5 @@ layout: layouts/base.liquid
 
 <h1>From post template: {{title}}</h1>
 <article class="prose prose-sm sm:prose lg:prose-lg xl:prose-xl">
-    {{content | safe}}
+    {{content }}
 </article>
